Initial Commit of ArkStat!

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html lang='en'>
 <head>
 
-  <title>Arken Core KeySet Stats</title>
+  <title>Arken Core KeySet ArkStat</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -37,7 +37,7 @@
   <section class="light"><div class="section-wrapper"><div class="columns">
     <div>
       <h1>{{.Title}}</h1>
-      <h3>Information about the Arken Cluster running on the Core KeySet</h3>
+      <h3>Meet Arken, A Tool to Securely Backup the World's Important Scientific Data.</h3>
     </div> 
     <div>
       <ul id='guide'>
