--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <div style="margin-right:-250px; width:800px">
-      <img src="desktop.png" alt="desktop app" width="600px"/>
+      <script id="asciicast-xYThJu7zRSEIgJlxAD7tCDICs" src="https://asciinema.org/a/xYThJu7zRSEIgJlxAD7tCDICs.js" async></script>
     </div>
   </div></div></section>
 
