Updated Arken Webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html lang='en'>
 <head>
 
-  <title>Arken Core KeySet ArkStat</title>
+  <title>Arken</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -52,8 +52,7 @@
   </div></div></section>
 
   <section id="public">
-    <h2>Leaderboard</h2>
-    <h3>Top contributers to the Arken Cluster!</h3>
+    <br>
   </section>
 
   <section id="about" class="default"><div class="section-wrapper"><div class="columns">
@@ -66,7 +65,10 @@
     </div>
 
     <div style="margin-right:-250px; width:800px">
-      <script id="asciicast-xYThJu7zRSEIgJlxAD7tCDICs" src="https://asciinema.org/a/xYThJu7zRSEIgJlxAD7tCDICs.js" async></script>
+      <a href="https://asciinema.org/a/344705" target="_blank"><img src="https://asciinema.org/a/344705.svg" /></a>
+      <br><br>
+      <h2>Want to read more about Arken?</h2>
+      <p>Check out the <a href="https://github.com/arkenproject/arken">Project's Github Page</a>.</p>
     </div>
   </div></div></section>
 
