--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" type="text/css" href="css/fonts/nitti.css" />
   <link rel="stylesheet" type="text/css" href="css/fonts/ibmplexmono.css" />
   <link rel="stylesheet" type="text/css" href="css/fonts/ibmplexsans.css" />
+  <link rel="stylesheet" href="graphic/public/global.css">
+  <link rel="stylesheet" href="graphic/public/build/bundle.css">
   <!--<link rel="stylesheet" type="text/css" href="/css/footer.css"/>-->
 
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -20,7 +22,7 @@
   <style type="text/css">
     .no-fouc {display: none;}
 </style>
-
+<script defer src="graphic/public/build/bundle.js"></script>
 <script type="text/javascript">
     document.documentElement.className = 'no-fouc';
 </script>
@@ -28,6 +30,11 @@
 </head>
 
 <body class="landing">
+  <script>
+    // set the values here and use them in the 
+    var values =[ {{.UsedSpace}} , {{.TotalSpace}} ]
+    console.log(values)
+  </script>
   <header><div class="header-wrapper"><div class="inner-wrapper">
   </div></div></header>
 
@@ -40,6 +47,7 @@
       <h3>Meet Arken, A Tool to Securely Backup the World's Important Scientific Data.</h3>
     </div> 
     <div>
+      <div id="graphicHolder"></div>
       <ul id='guide'>
         <li><b>Used Space:</b> {{.UsedSpace}} TB</li>
         <li><b>Total Space:</b> {{.TotalSpace}} TB</li>
