--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-  <meta name="description" content="p2p chat" />
+  <meta name="description" content="Meet Arken, A Decentralized Archival Cluster for the World's most Important Data." />
 
   <link rel="stylesheet" type="text/css" href="css/fonts/nitti.css" />
   <link rel="stylesheet" type="text/css" href="css/fonts/ibmplexmono.css" />
@@ -36,8 +36,8 @@
   <script>
     // set the values here and use them in the 
     window.onload = () => {
-      let used = {{.UsedSpace }}
-    let total = {{.TotalSpace }}
+      let used = {{.UsedSpace}}
+      let total = {{.TotalSpace}}
     console.log(new window.LoadVis({
       target: document.querySelector("#graphicHolder"),
       props: {
@@ -63,10 +63,11 @@
           <div class="columns">
             <div>
               <h1>{{.Title}}</h1>
-              <h3>Meet Arken, A Tool to Securely Backup the World's Important Scientific Data.</h3>
+              <h3>Meet Arken, A Decentralized Archival Cluster for the World's most Important Data.</h3>
             </div>
             <div>
               <div id="graphicHolder"></div>
+              <br>
               <ul id='guide'>
                 <li><b>Used Space:</b> {{.UsedSpace}} TB</li>
                 <li><b>Total Space:</b> {{.TotalSpace}} TB</li>
@@ -74,14 +75,10 @@
                 <hr />
                 <li><b>Gitub:</b> <a href="https://github.com/arkenproject/arken">arkenproject/arken</a></li>
                 <hr />
-                <li><b>Dockerhub:</b> <a href='https://hub.docker.com/r/arkenproject/arken'>docker-arken</a></li>
+                <li><b>Dockerhub:</b> <a href='https://hub.docker.com/r/arkenproject/arken'>arkenproject/arken</a></li>
               </ul>
             </div>
           </div>
-      </section>
-
-      <section id="public">
-        <br>
       </section>
 
       <section id="about" class="default">
@@ -102,10 +99,10 @@
                 backed up by more than 10% of the cluster.</p>
             </div>
 
-            <div style="margin-right:-250px; width:800px">
-              <a href="https://asciinema.org/a/344705" target="_blank"><img
-                  src="https://asciinema.org/a/344705.svg" /></a>
-              <br><br>
+            <div>
+              <img src="https://link.arken.io/ipfs/QmUES5i6qRrQ2n5Y5is7rF8NzNNqGypbknrtjas5pxBiXN">
+              <br>
+              <br>
               <h2>Want to read more about Arken?</h2>
               <p>Check out the <a href="https://github.com/arkenproject/arken">Project's Github Page</a>.</p>
             </div>
