Update Arken Website HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
           <div class="columns">
             <div>
               <h1>{{.Title}}</h1>
-              <h3>Meet Arken, A Decentralized Archival Cluster for the World's most Important Data.</h3>
+              <h3>Meet Arken, A Decentralized Archival Cluster Built for the World's Most Important Data.</h3>
             </div>
             <div>
               <div id="graphicHolder"></div>
@@ -86,22 +86,26 @@
           <div class="columns">
             <div>
               <h2>A bit of Backstory</h2>
-              <p>Many Researchers, Museums, and Archivists are struggling to host and protect a vast amount of important
-                public data. On the other hand, there are many of us developers, tinkerers, and general computer
-                enthusists who have extra storage space on our home servers.
-                The idea for Arken is to build an autonomous system for organizing, balancing, and distributing this
-                data to users who can donate their extra space.</p>
+              <p>Many researchers, museums, and archivists are struggling to host and protect a vast amount of important public data. 
+                On the other hand, there are many of us developers, tinkerers, and general computer enthusiasts who have extra storage 
+                space on our home servers.
+                <br>
+                The goal of Arken is to build an autonomous system for organizing, balancing, and distributing this data among users who 
+                can donate their extra space.</p>
               <h2>What is Arken?</h2>
-              <p>Arken is management engine that runs on top of the IPFS (Interplanetary File System) protocol. Each
-                instance of Arken calculates which important files are hosted by the fewest number of other nodes on the
-                network and should be locally backed up to reduce the risk of data loss. Arken also knows how much space
-                it's using on your system and will respect limits you set by looking to locally delete data that is
-                backed up by more than 10% of the cluster.</p>
+              <p>Arken is a management engine that runs on top of the IPFS (Interplanetary File System) protocol. Each instance of Arken 
+                calculates which important files are hosted by the fewest number of other nodes on the network and should thus be 
+                locally backed up to reduce the risk of data loss. Arken also knows how much space it's using on your system and will 
+                respect limits you set by locally deleting data that is backed up by more than 10% of the cluster.</p>
             </div>
 
             <div>
               <img src="https://link.arken.io/ipfs/QmUES5i6qRrQ2n5Y5is7rF8NzNNqGypbknrtjas5pxBiXN">
               <br>
+              <br>
+              <h2>Keyset Security</h2>
+              <p>Since Keysets are openly available through Git repositories, they can be easily audited but can only be changed by 
+                users who have access to those Git repositories or through pull requests.</p>
               <br>
               <h2>Want to read more about Arken?</h2>
               <p>Check out the <a href="https://github.com/arkenproject/arken">Project's Github Page</a>.</p>
