--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
   <meta name="description" content="Meet Arken, A Decentralized Archival Cluster for the World's most Important Data." />
 
+  <link rel="icon" type="image/ico" href="/images/favicon.svg" />
   <link rel="stylesheet" type="text/css" href="css/fonts/nitti.css" />
   <link rel="stylesheet" type="text/css" href="css/fonts/ibmplexmono.css" />
   <link rel="stylesheet" type="text/css" href="css/fonts/ibmplexsans.css" />
@@ -33,6 +34,20 @@
 </head>
 
 <body class="landing">
+  <header><div class="header-wrapper"><div class="inner-wrapper">
+    <nav id="navBar" class="no-js nav-bar">
+
+  <a class="nav-logo" href="/">
+    <img class='logo' src='/images/logo.svg' width="200px" height="100px"></a>
+    <div class="nav-right ">
+      <div class="nav-links "">
+          <ul>
+              <!-- <li><a href="https://arken.io/upload">Upload Data</a></li>
+              <li><a href="/contibute">Contibute Space</a></li> -->
+          </ul>
+        </div>
+      </div>
+</nav>
   <script>
     // set the values here and use them in the 
     window.onload = () => {
@@ -62,7 +77,6 @@
         <div class="section-wrapper">
           <div class="columns">
             <div>
-              <h1>{{.Title}}</h1>
               <h3>Meet Arken, A Decentralized Archival Cluster Built for the World's Most Important Data.</h3>
             </div>
             <div>
