Include Demo Video

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,8 @@
             </div>
 
             <div>
-              <img src="https://link.arken.io/ipfs/QmUES5i6qRrQ2n5Y5is7rF8NzNNqGypbknrtjas5pxBiXN">
+              <h2>Arken Demo</h2>
+              <a href="https://asciinema.org/a/344705" target="_blank"><img src="https://asciinema.org/a/344705.svg" /></a>
               <br>
               <br>
               <h2>Keyset Security</h2>
