Initial Commit of Upload Docs

--- a/templates/docs/data.html
+++ b/templates/docs/data.html
@@ -87,6 +87,7 @@
         <section id="faq" class="light"><div class="section-wrapper faq">
             <div id='navigation' class="links">
               <a id='Introduction' class='active' href="#intro">Introduction</a>
+              <a id='The Arken Import Tool' class='active' href="#ait">The Arken Import Tool</a>
             </div>
             <div id="questions">
               <h2 id="intro">Introduction</h2>
@@ -96,7 +97,44 @@
                 <span><footer class='footer-caret-down' src='/img/footer/down-caret.svg' alt='Toggle expanded answer on mobile'/></span>
                 <span class='hide'><footer class='footer-caret-up' src='/img/footer/up-caret.svg' alt='Toggle expanded answer on mobile'/></span></h3>
                 <span><p>
-                    Comming Soon!                     
+                  The first step when uploading data to Arken is to chose which Keyset your data fits into.
+                  A Keyset is an file manifest that tells the cluster what files it should keep track of and 
+                  backup. These manifests are at their most basic, a shared directory of files that contain metadata 
+                  (but not the actual data) of your files letting the nodes of their existence and how to find them. 
+                  (Hence we call these manifests Keysets because they are a set of file keys.)  
+                  <br>
+                  <br>
+                  If you're a researcher with an important data set, author who wants to open source their book, or 
+                  curator of an important collection, you're likely looking for the Core Keyset. The Core Keyset is the 
+                  central manifest that we maintain at the Arken Project and is intended to help preserve valuable scientific 
+                  and open source data otherwise at risk of being lost.
+                  <br>
+                  <br>
+                  Keysets don't just have to be for serious stuff however, anyone can create their own Keyset and use it to backup 
+                  and share family photos, song recordings, etc... between your own Arken nodes.
+                  <br>
+                  <br>
+                  If you've got any questions, reach out to us at <a href = "mailto: team@arken.io">team@arken.io</a>.
+                </p></span>
+              </div>
+              <h2 id="ait">The Arken Import Tool</h2>
+              <div class="question">
+                <h3>Installing & Using the Arken Import Tool:
+                <span><footer class='footer-caret-down' src='/img/footer/down-caret.svg' alt='Toggle expanded answer on mobile'/></span>
+                <span class='hide'><footer class='footer-caret-up' src='/img/footer/up-caret.svg' alt='Toggle expanded answer on mobile'/></span></h3>
+                <span><p>
+                  Whether you're uploading data to the Core Keyset or to your own Keyset, you'll need a tool to do that. 
+                  That tool is called AIT (or the Arken Import Tool). AIT is a command line tool and if you've ever heard 
+                  of <a href= "https://git-scm.com/"> GIT</a> it's got a very similar syntax. You can download AIT 
+                  <a href="https://github.com/arkenproject/ait/releases">HERE</a> for Linux and Mac, and the Windows version is coming soon.
+                </p></span>
+              </div>
+              <div class="question">
+                <h3>Demo:
+                <span><footer class='footer-caret-down' src='/img/footer/down-caret.svg' alt='Toggle expanded answer on mobile'/></span>
+                <span class='hide'><footer class='footer-caret-up' src='/img/footer/up-caret.svg' alt='Toggle expanded answer on mobile'/></span></h3>
+                <span><p>
+                  Comming Soon!
                 </p></span>
               </div>
               </div>
