Update to include a short intro about contributing space to Arken

--- a/templates/docs/contibute.html
+++ b/templates/docs/contibute.html
@@ -96,7 +96,9 @@
                 <span><footer class='footer-caret-down' src='/img/footer/down-caret.svg' alt='Toggle expanded answer on mobile'/></span>
                 <span class='hide'><footer class='footer-caret-up' src='/img/footer/up-caret.svg' alt='Toggle expanded answer on mobile'/></span></h3>
                 <span><p>
-                    Comming Soon!                      
+                  Old computers or servers with some empty storage space make excellent Arken nodes. 
+                  Check out our guide for configuring a Raspberry Pi with Docker and External Storage 
+                  <a href="https://github.com/arkenproject/arken/blob/master/docs/raspberry-pi-setup.md">here</a>. 
                 </p></span>
               </div>
               </div>
