--- a/templates/docs/contibute.html
+++ b/templates/docs/contibute.html
@@ -198,25 +198,29 @@ $ sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
                   <br>
                   <br>
                   Run the following to download a template Arken Config File,
-                  <pre><code>$ wget https://raw.githubusercontent.com/arkenproject/arken/master/docs/examples/docker-compose.yml</code></pre>
+                  <pre class="highlight"><code>$ wget https://raw.githubusercontent.com/arkenproject/arken/master/docs/examples/docker-compose.yml</code></pre>
                   <br>
                   <br>
                   Now you can open that file by typing,
                   <br>
                   <br>
-                  <pre><code>$ nano docker-compose.yml</code></pre>
+                  <pre class="highlight"><code>$ nano docker-compose.yml</code></pre>
                   <br>
                   <br>
                   Read through this file and change all of the fields with the < and > markers.
                 
                   Once you are finished updating the file you can save your changes by pressing CTRL + X.
                   Now we can launch the docker containers by running,
-                  <pre><code>$ sudo docker-compose up -d</code></pre>
+                  <br>
+                  <br>
+                  <pre class="highlight"><code>$ sudo docker-compose up -d</code></pre>
                   <br>
                   <br>
                   And that's it! Arken is now running on your local machine!
                   If you'd like to see the status of the application you can type,
-                  <pre><code>$ sudo docker-compose logs -f arken</code></pre>
+                  <br>
+                  <br>
+                  <pre class="highlight"><code>$ sudo docker-compose logs -f arken</code></pre>
                 </p></span>
               </div>
               </div>
