Update Message and Website Metadata

--- a/templates/docs/data.html
+++ b/templates/docs/data.html
@@ -58,8 +58,8 @@
         <div class="nav-right ">
           <div class="nav-links "">
               <ul>
-                  <li><a href="/docs/data.html">Upload Data</a></li>
-                  <li><a href="/docs/contibute.html">Contibute Space</a></li>
+                  <li><a href="/docs/data">Upload Data</a></li>
+                  <li><a href="/docs/contibute">Contibute Space</a></li>
               </ul>
             </div>
           </div>
@@ -69,8 +69,8 @@
       <div id='overlay'></div>
       <div id="burgernav">
         <ul>
-          <li><a href="/docs/data.html">Upload Data</a></li>
-          <li><a href="/docs/contibute.html">Contibute Space</a></li>
+          <li><a href="/docs/data">Upload Data</a></li>
+          <li><a href="/docs/contibute">Contibute Space</a></li>
         </ul>
       </div>
   </nav>
