--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-  <meta name="description" content="Meet Arken, A Decentralized Archival Cluster for the World's most Important Data." />
+  <meta name="description" content="Meet Arken, A Decentralized Digital Archive Built for the World's Scientific Data." />
 
   <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
@@ -58,8 +58,8 @@
         <div class="nav-right ">
           <div class="nav-links "">
               <ul>
-                  <li><a href="/docs/data.html">Upload Data</a></li>
-                  <li><a href="/docs/contibute.html">Contibute Space</a></li>
+                  <li><a href="/docs/data">Upload Data</a></li>
+                  <li><a href="/docs/contibute">Contibute Space</a></li>
               </ul>
             </div>
           </div>
@@ -69,8 +69,8 @@
       <div id='overlay'></div>
       <div id="burgernav">
         <ul>
-          <li><a href="/docs/data.html">Upload Data</a></li>
-          <li><a href="/docs/contibute.html">Contibute Space</a></li>
+          <li><a href="/docs/data">Upload Data</a></li>
+          <li><a href="/docs/contibute">Contibute Space</a></li>
         </ul>
       </div>
   </nav>
@@ -99,7 +99,7 @@
         <div class="section-wrapper">
           <div class="columns">
             <div>
-              <h3>Meet Arken, A Decentralized Archival Cluster Built for the World's Most Important Data.</h3>
+              <h3>Meet Arken, A Decentralized Digital Archive Built for the World's Scientific Data.</h3>
             </div>
             <div>
               <div id="graphicHolder"></div>
