Update Website and include Hello Message to new users.

--- a/templates/docs/contribute.html
+++ b/templates/docs/contribute.html
@@ -95,10 +95,10 @@
               <a id='Introduction' class='active' href="#intro">Introduction</a>
               <a id='Installing Docker' class='active' href="#docker">Installing Docker</a>
               <a id='Installing Arken' class='active' href="#arken">Installing Arken</a>
+              <a id='Arken Demo' class='active' href="#arken-demo">Arken Demo</a>
             </div>
             <div id="questions">
-              <h2 id="intro">Introduction</h2>
-      
+              <h2 id="intro">Introduction</h2>      
               <div class="question">
                 <h3>How can I help contibute space to the Arken cluster?
                 <span><footer class='footer-caret-down' src='/img/footer/down-caret.svg' alt='Toggle expanded answer on mobile'/></span>
@@ -222,6 +222,13 @@ $ sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
                   <br>
                   <pre class="highlight"><code>$ sudo docker-compose logs -f arken</code></pre>
                 </p></span>
+              </div>
+              <h2 id="arken-demo">Arken Demo</h2>
+              <div class="question">
+                <h3>Watch a demo of Arken
+                  <span><footer class='footer-caret-down' src='/img/footer/down-caret.svg' alt='Toggle expanded answer on mobile'/></span>
+                  <span class='hide'><footer class='footer-caret-up' src='/img/footer/up-caret.svg' alt='Toggle expanded answer on mobile'/></span></h3>
+                  <a href="https://asciinema.org/a/344705" target="_blank"><img src="/images/demo.svg" /></a>
               </div>
               </div>
             </div>
