--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,8 @@
   </script>
 
   </div></div></header>
+    <div class="wrapper">
+
       <section class="light">
         <div class="section-wrapper">
           <div class="columns">
@@ -154,6 +156,7 @@
           </div>
         </div>
       </section>
+    </div>
 
   <script src='/js/nav.js'></script>
   <script>
